istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-web-virtualservice
  namespace: go-web-app
spec:
  hosts:
  - "*"
  gateways:
  - go-web-app/go-web-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: go-web-app.go-web-app.svc.cluster.local
        port:
          number: 80
